# iter

./: CMakeLists.txt  LICENSE  README.md
colormaps/: jet.txt  turbo.txt  viridis.txt
src/: color.cpp  color.h  cx.cpp  cx.h  func.cpp  func.h  iter.cpp  iter.h  log.cpp  log.h  main.cpp  vec.cpp  vec.h
